# score-dumper

./: Cargo.toml  README.md
src/: main.rs  pp.rs  pp.rs.txt  utils.rs
src/model/: gameplay.rs  menu.rs  mod.rs  settings.rs
