[package]
name = "score-dumper"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.6.1", features = ["chrono-0_4"] }
chrono = "0.4.26" 
mongodb = {version = "2.6.0", default-features = false, features = ["sync"] }
rosu-pp = "0.9.4"
serde = "1.0.165"
serde_json = "1.0.99"
tokio = "1.29.1"
tungstenite = "0.19.0"
url = "2.4.0"

# [profile.release]
# opt-level = 'z'     # Optimize for size
# lto = true          # Enable link-time optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*